# lab_15

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/tests/: test.c  test.h
